src/kubernetes/deployment-envoy-gateway.yaml
# Source: gateway-helm/templates/envoy-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendor-envoy-gateway
  namespace: '${Environment}'
  labels:
    control-plane: envoy-gateway
    app.kubernetes.io/name: ${ProjectName}
    app.kubernetes.io/instance: vendor-envoy-gateway
    app.kubernetes.io/version: "${Version}"
    app.kubernetes.io/managed-by: Kaptain
    app: ${ProjectName}
    app.kubernetes.io/part-of: ${ProductName}
    kaptain.org/environment: ${Environment}
    kaptain.org/product: ${ProductName}
    kaptain.org/project-name: ${ProjectName}
    kaptain.org/version: "${Version}"
    kaptain.org/owner: kube-kaptain
  annotations:
    kaptain.org/helm-upstream-chart: gateway-helm-1.7.5
    kaptain.org/generated-by: Generated by Kaptain vendor-helm-render-and-process
    kaptain.org/source-repository: kube-kaptain/vendor-envoy-gateway
spec:
  replicas: ${VendorEnvoyGateway/Replicas}
  selector:
    matchLabels:
      control-plane: envoy-gateway
      app.kubernetes.io/name: vendor-envoy-gateway
      app.kubernetes.io/instance: vendor-envoy-gateway
  template:
    metadata:
      annotations:
        prometheus.io/port: "19001"
        prometheus.io/scrape: "true"
      labels:
        control-plane: envoy-gateway
        app.kubernetes.io/name: vendor-envoy-gateway
        app.kubernetes.io/instance: vendor-envoy-gateway
        app: vendor-envoy-gateway
    spec:
      containers:
        - args:
            - server
            - --config-path=/config/envoy-gateway.yaml
          image: ${VendorEnvoyGateway/EnvironmentDockerRegistryAndNamespace}/${DockerImageName}:${DockerTagGateway}
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            periodSeconds: 20
          name: envoy-gateway
          ports:
            - containerPort: 18000
              name: grpc
            - containerPort: 18001
              name: ratelimit
            - containerPort: 18002
              name: wasm
            - containerPort: 19001
              name: metrics
            - name: webhook
              containerPort: 9443
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            periodSeconds: 10
          resources:
            limits:
              memory: ${VendorEnvoyGateway/Memory}
            requests:
              cpu: ${VendorEnvoyGateway/CpuRequest}
              memory: ${VendorEnvoyGateway/Memory}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsGroup: 65532
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /config
              name: envoy-gateway-config
              readOnly: true
            - mountPath: /certs
              name: certs
              readOnly: true
          startupProbe:
            httpGet:
              path: /healthz
              port: 8081
            periodSeconds: 1
            failureThreshold: 30
      imagePullSecrets: []
      serviceAccountName: envoy-gateway
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            defaultMode: 420
            name: envoy-gateway-config
          name: envoy-gateway-config
        - name: certs
          secret:
            secretName: envoy-gateway
