src/kubernetes/service-envoy-gateway.yaml
# Source: gateway-helm/templates/envoy-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
  namespace: '${Environment}'
  labels:
    control-plane: envoy-gateway
    app.kubernetes.io/name: ${ProjectName}
    app.kubernetes.io/instance: vendor-envoy-gateway
    app.kubernetes.io/version: "${Version}"
    app.kubernetes.io/managed-by: Kaptain
    app: ${ProjectName}
    app.kubernetes.io/part-of: ${ProductName}
    kaptain.org/environment: ${Environment}
    kaptain.org/product: ${ProductName}
    kaptain.org/project-name: ${ProjectName}
    kaptain.org/version: "${Version}"
    kaptain.org/owner: kube-kaptain
  annotations:
    kaptain.org/helm-upstream-chart: gateway-helm-1.7.5
    kaptain.org/generated-by: Generated by Kaptain vendor-helm-render-and-process
    kaptain.org/source-repository: kube-kaptain/vendor-envoy-gateway
spec:
  type: ClusterIP
  selector:
    control-plane: envoy-gateway
    app.kubernetes.io/name: vendor-envoy-gateway
    app.kubernetes.io/instance: vendor-envoy-gateway
  ports:
    - name: grpc
      port: 18000
      targetPort: 18000
    - name: ratelimit
      port: 18001
      targetPort: 18001
    - name: wasm
      port: 18002
      targetPort: 18002
    - name: metrics
      port: 19001
      targetPort: 19001
    - name: webhook
      port: 9443
      targetPort: 9443
