src/kubernetes/mutatingwebhookconfiguration-topology-injector.yaml
# Source: gateway-helm/templates/envoy-proxy-topology-injector-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: 'envoy-gateway-topology-injector.${Environment}'
  annotations:
    kaptain.org/helm-upstream-chart: gateway-helm-1.7.5
    kaptain.org/generated-by: Generated by Kaptain vendor-helm-render-and-process
    kaptain.org/source-repository: kube-kaptain/vendor-envoy-gateway
  labels:
    app.kubernetes.io/component: topology-injector
    app.kubernetes.io/name: ${ProjectName}
    app.kubernetes.io/instance: vendor-envoy-gateway
    app.kubernetes.io/version: "${Version}"
    app.kubernetes.io/managed-by: Kaptain
    app: ${ProjectName}
    app.kubernetes.io/part-of: ${ProductName}
    kaptain.org/environment: ${Environment}
    kaptain.org/product: ${ProductName}
    kaptain.org/project-name: ${ProjectName}
    kaptain.org/version: "${Version}"
    kaptain.org/owner: kube-kaptain
webhooks:
  - name: topology.webhook.gateway.envoyproxy.io
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: envoy-gateway
        namespace: '${Environment}'
        path: "/inject-pod-topology"
        port: 9443
    failurePolicy: Ignore
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods/binding"]
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values: [${VendorEnvoyGateway/MonitoredNamespaceList}]
